# bash-markdown-fence

./: MANIFEST.in  README.md  build_backend.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test-publish.yml
bmdf/: utils.py
bmdf/cli/: __init__.py
mdcmd/cli/: __init__.py
mktoc/cli/: __init__.py
src/bmdf/: toc.py  utils.py
src/bmdf/cli/: __init__.py
src/mdcmd/cli/: __init__.py
src/mktoc/cli/: __init__.py
src/toc/: __init__.py  mktoc.py
test/: print-ci-yml-ref.py  print-table.py  test_bmdf.py  test_mdcmd.py  test_mdcmd_lists.py  test_mktoc.py  utils.py
test/data/: README.md
test/scripts/: h3.py
